k8s/overlays/prod/ingress.yaml
# NOTE: Host values and certificate ARN are updated automatically by:
#   ./scripts/generate-config.sh prod
# Do NOT manually edit hostnames or certificate-arn.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic-prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:482352877891:certificate/eaaa7275-c377-4256-8ed5-691aebb3e1a9
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: petclinic-app
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
spec:
  ingressClassName: alb
  rules:
    - host: petclinic.praty.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
    - host: admin.praty.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-server
                port:
                  number: 9090
